--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -46,25 +46,52 @@ html, body {
 /* ###### END BODY ###### */
 
 /* START HEADER*/
-.c-header {
-  grid-area: header;
-}
 
 .c-header {
+  grid-area: header;
   display: flex;
   justify-content: space-between;
   align-items: center;
   position: relative;
+  background-color: var(--standard-white);
+}
+
+.c-header__img_bg {
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+}
+
+.c-header__img_bg img {
+  max-width: 100%;
+  opacity: 0.5;
+}
+
+.c-header__social {
+  display: none;
+  position: absolute;
+  top: 10px;
+  width: 100%;
+  text-align: center;
+  z-index: 100;
+}
+
+.c-header__social_link {
+  width: 30px;
 }
 
 .c-header__logo-container {
   width: 100%;
-  max-width: 200px;
+  max-width: 80px;
   align-self: flex-start;
+  padding: 2%;
+  z-index: 2;
 }
 
 .c-header__logo {
   max-width: 100%;
+  border-radius: 10px;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.747);
 }
 
 .c-header__nav_menu_mobile {
@@ -72,8 +99,10 @@ html, body {
   border-radius: 5px 0 0 5px;
   cursor: pointer;
   position: absolute;
+  top: 10px;
   right: 5px;
   transition: all 300ms ease;
+  z-index: 1000000;
 }
 
 .c-header__nav {
@@ -87,6 +116,7 @@ html, body {
   min-height: 100vh;
   line-height: 2;
   transition: all 300ms ease;
+  z-index: 1000000;
 }
 
 .c-header__nav ul {
@@ -133,6 +163,44 @@ html, body {
 /* START MAIN */
 .c-main {
   grid-area: main;
+  background-color: var(--light-white);
+  z-index: 2;
+  position: relative;
+}
+
+.c-main__intro {
+  position: relative;
+  top: -8px;
+}
+
+.c-main__benefit {
+  max-width: 280px;
+  transition: all 3s ease-in-out;
+  line-height: 1.5;
+  background-image: linear-gradient(45deg, var(--heavy-blue), var(--intermediate-blue), var(--blue-green));
+  margin: 10px 10px;
+  padding: 10px;
+}
+
+.c-main__benefit h2 {
+  text-align: center;
+  color: var(--standard-white);
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+.c-main__benefit p {
+  color: var(--light-white);
+  font-size: 12px;
+  text-align: center;
+}
+
+.is_left {
+  opacity: 0;
+}
+
+.is_right {
+  opacity: 0;
 }
 
 /* ###### END MAIN ###### */
@@ -144,7 +212,90 @@ html, body {
 }
 /* ###### END FOOTER ###### */
 
+@media screen and (max-width: 300px) {
+
+}
+
+@media screen and (min-width: 320px) {
+  .c-header__logo-container {
+    max-width: 150px;
+  }
+
+  .c-main__intro {
+    min-height: 500px;
+  }
+
+  .c-main__benefit {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .is_left {
+    left: -100%;
+    padding: 10px 15px 10px 5px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    transition: all 1s ease-in-out;
+    background-image: linear-gradient(45deg, var(--heavy-blue), var(--intermediate-blue), var(--blue-green));
+  }
+  
+  .is_left:nth-last-of-type(1) {
+    top: 298px;
+  }
+  
+  .is_right {
+    top: 120px;
+    right: -100%;
+    padding: 10px 15px 10px 35px;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    transition: all 1s ease-in-out;
+    background-image: linear-gradient(-45deg, var(--heavy-blue), var(--intermediate-blue), var(--blue-green));
+  }
+  
+  .is_right h2 {
+    text-align: right;
+  }
+}
+
+@media screen and (min-width: 400px) {
+  .c-header__social {
+    display: block;
+  }
+
+  .c-main__intro {
+    min-height: 420px;
+  }
+
+  .c-main__benefit {
+    max-width: 360px;
+  }
+
+  .c-main__benefit:nth-last-of-type(1) {
+    top: 290px;
+  }
+
+  .is_right {
+    top: 135px;
+  }
+
+  .c-main__benefit h2 {
+    text-align: left;
+    font-size: 16px;
+  }
+  
+  .c-main__benefit p {
+    font-size: 14px;
+    text-align: left;
+  }
+}
+
 @media screen and (min-width: 768px) {
+  .c-header__logo-container {
+    max-width: 250px;
+  }
+
   .c-header__nav_menu_mobile {
     display: none !important;
   }
@@ -154,7 +305,7 @@ html, body {
     display: flex;
     align-items: center;
     position: relative;
-    min-width: 450px;
+    min-width: 580px;
     overflow-y: visible;
     padding: 0 2%;
     min-height: 100%;
@@ -166,5 +317,46 @@ html, body {
     display: flex;
     column-gap: 45px;
     width: auto;
+  }
+
+  .c-main__intro {
+    top: -15px;
+    min-height: 320px;
+  }
+
+  .c-main__benefit {
+    min-width: 600px;
+    max-width: 600px;
+    padding: 10px 25px;
+    border-radius: 50px;
+  }
+
+  .c-main__benefit h2, .c-main__benefit p {
+    text-align: center !important;
+  }
+
+  .c-main__benefit:nth-last-of-type(1) {
+    top: 210px;
+  }
+
+  .is_left {
+    left: 50% !important;
+    transform: translate(-50%, 0);
+  }
+
+  .is_right {
+    top: 95px;
+    right: 50% !important;
+    transform: translate(50%, 0);
+  }
+
+  .c-main__benefit h2 {
+    text-align: left;
+    font-size: 16px;
+  }
+  
+  .c-main__benefit p {
+    font-size: 14px;
+    text-align: left;
   }
 }
