feat: created the professional profile

--- a/app_home/templates/app_home/pages/home.html
+++ b/app_home/templates/app_home/pages/home.html
@@ -47,6 +47,7 @@
 
     <!-- start main -->
     <main class="c-main">
+        <!-- intro and benefit of the exercises -->
         <section class="c-main__intro">
             <div class="c-main__benefit is_left">
                 <h2>Saúde e bem-estar</h2>
@@ -62,6 +63,18 @@
                 <h2>Personal Trainer</h2>
                 <p>O Personal Trainer é o profissional educador físico responsável pelo atendimento individualizado ao cliente, atuando na promoção e recuperação da saúde.
                 </p>
+            </div>
+        </section>
+
+        <!-- professional profile -->
+        <section class="c-main__profile center_flex_column standard_transition">
+            <div class="c-main__profile_img-container standard_transition">
+                <img src="{% static 'global/images/profile.jpeg' %}" alt="professional image" class="c-main__profile_img standard_transition">
+            </div>
+            <div class="c-main__profile_description standard_transition">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non beatae id voluptatibus voluptatem, explicabo accusamus illo ex repellat, alias maiores sapiente. At fuga temporibus quaerat fugiat? Id ut beatae nostrum?
+                Illum dolor at nostrum nobis in corrupti temporibus nisi animi rerum necessitatibus molestiae iste deserunt impedit eos voluptas maiores cum beatae aut delectus vitae, eveniet alias! Esse quos non deserunt.
+                Eveniet quo amet perspiciatis vel inventore eaque nemo ducimus porro, possimus dignissimos, praesentium autem animi beatae quam dicta necessitatibus? Praesentium illo ab magni soluta odit tempora veritatis voluptatibus ea temporibus.</p>
             </div>
         </section>
     </main>
