feat: created the features for profile and services

--- a/app_home/templates/app_home/pages/home.html
+++ b/app_home/templates/app_home/pages/home.html
@@ -72,9 +72,55 @@
                 <img src="{% static 'global/images/profile.jpeg' %}" alt="professional image" class="c-main__profile_img standard_transition">
             </div>
             <div class="c-main__profile_description standard_transition">
+                <h1>personal maicon</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non beatae id voluptatibus voluptatem, explicabo accusamus illo ex repellat, alias maiores sapiente. At fuga temporibus quaerat fugiat? Id ut beatae nostrum?
                 Illum dolor at nostrum nobis in corrupti temporibus nisi animi rerum necessitatibus molestiae iste deserunt impedit eos voluptas maiores cum beatae aut delectus vitae, eveniet alias! Esse quos non deserunt.
                 Eveniet quo amet perspiciatis vel inventore eaque nemo ducimus porro, possimus dignissimos, praesentium autem animi beatae quam dicta necessitatibus? Praesentium illo ab magni soluta odit tempora veritatis voluptatibus ea temporibus.</p>
+            </div>
+        </section>
+
+        <!-- fast gallery -->
+        <section class="c-main__gallery">
+            <ul class="c-main__gallery_container center_margin">
+                <li class="c-main__gallery_li">
+                    <input type="radio" name="slide" id="slide1" checked>
+                    <label for="slide1"></label>
+                    <img src="{% static 'global/images/main-gallery/img1.jpg' %}" alt="" class="c-main__gallery_img">
+                </li>
+
+                <li class="c-main__gallery_li">
+                    <input type="radio" name="slide" id="slide2">
+                    <label for="slide2"></label>
+                    <img src="{% static 'global/images/main-gallery/img2.jpg' %}" alt="" class="c-main__gallery_img">
+                </li>
+
+                <li class="c-main__gallery_li">
+                    <input type="radio" name="slide" id="slide3">
+                    <label for="slide3"></label>
+                    <img src="{% static 'global/images/main-gallery/img3.jpg' %}" alt="" class="c-main__gallery_img">
+                </li>
+            </ul>
+        </section>
+
+        <!-- services -->
+        <section class="c-main__services_container">
+            <div class="c-main__services_content center_flex_row center_margin standard_transition">
+                <div class="c-main_service">
+                    <h2>lorem ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, nostrum.</p>
+                </div>
+                <div class="c-main_service">
+                    <h2>lorem ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, nostrum.</p>
+                </div>
+                <div class="c-main_service">
+                    <h2>lorem ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, nostrum.</p>
+                </div>
+                <div class="c-main_service">
+                    <h2>lorem ipsum</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, nostrum.</p>
+                </div>
             </div>
         </section>
     </main>
