--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -10,6 +10,7 @@
   --intermediate-blue: #0B7DB2;
   --intermediate-blue-2: #26557A;
   --heavy-blue: #283958;
+  --sec-blue: #B3CBD7;
   --light-white: #FBFBFB;
   --standard-white: #ffffff;
   --standard-black: #000000;
@@ -116,7 +117,8 @@ html, body {
 }
 
 .c-header__nav_menu_mobile {
-  background-color: var(--blue-green);
+  background-color: var(--intermediate-blue-2);
+  color: var(--light-white);
   border-radius: 5px 0 0 5px;
   cursor: pointer;
   position: absolute;
@@ -127,7 +129,7 @@ html, body {
 }
 
 .c-header__nav {
-  background-color: var(--blue-green);
+  background-color: var(--intermediate-blue-2);
   position: absolute;
   top: 0;
   right: 0;
@@ -152,7 +154,7 @@ html, body {
 .c-header__nav ul li a {
   text-decoration: none;
   font-weight: 500;
-  color: var(--heavy-blue);
+  color: var(--light-white);
   transition: all 300ms ease;
 }
 
@@ -192,6 +194,7 @@ html, body {
 .c-main__intro {
   position: relative;
   top: -8px;
+  z-index: 2;
 }
 
 .c-main__benefit {
@@ -216,23 +219,127 @@ html, body {
 }
 
 .c-main__profile {
-  padding: 0 2%;
+  padding: 0 2% 20px 2%;
   position: relative;
-  top: -10px;
-  background-color: var(--blue-green);
+  top: -20px;
+  background-color: var(--sec-blue);
 }
 
 .c-main__profile_img-container {
   width: 100%;
   max-width: 320px;
+  margin-top: 25px;
   text-align: center;
 }
 
 .c-main__profile_description {
-  text-align: center;
+  text-align: justify;
   line-height: 1.5;
   width: 100%;
+  max-width: 500px;
+}
+
+.c-main__profile_description h1 {
+  text-transform: uppercase;
+  text-align: center;
+  padding-bottom: 15px;
+  color: var(--heavy-blue);
+  font-weight: bolder;
+}
+
+.c-main__gallery {
+  padding: 0 2%;
+  margin-bottom: 20px;
+}
+
+.c-main__gallery input {
+  display: none;
+}
+
+.c-main__gallery_container label {
+  display: block;
+  position: absolute;
+  bottom: 10px;
+  width: 15px;
+  height: 15px;
+  background-color: var(--light-white);
+  border-radius: 50%;
+  border: 0px solid black;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.c-main__gallery_container li:nth-child(1) label {
+  left: 40%;
+}
+
+.c-main__gallery_container li:nth-child(2) label {
+  left: 50%;
+}
+
+.c-main__gallery_container li:nth-child(3) label {
+  left: 60%;
+}
+
+.c-main__gallery_container {
+  width: 100%;
+  max-width: 600px;
+  position: relative;
+}
+
+.c-main__gallery_li {
+  list-style: none;
+}
+
+.c-main__gallery_img {
+  width: 100%;
+  opacity: 0;
+  transition: all 300ms ease;
+  display: none;
+}
+
+.c-main__gallery_li input:checked ~ label {
+  background-color: var(--heavy-blue);
+}
+
+.c-main__gallery_li input:checked ~ img {
+  animation-name: to-role;
+  animation-duration: 300ms;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  display: block;
+}
+
+.c-main__services_container {
+  width: 100%;
+  background-image: url('../images/bg_parallax.jpg');
+  background-size: cover;
+  background-position: top center;
+  background-attachment: fixed;
+  padding: 2%;
+}
+
+.c-main__services_content {
+  width: 100%;
   max-width: 650px;
+  flex-wrap: wrap;
+  column-gap: 20px;
+}
+
+.c-main_service {
+  max-width: 240px;
+  text-align: center;
+  margin: 10px 0;
+  padding: 20px;
+  border-radius: 15px;
+  background-color: rgba(255, 255, 255, 0.733);
+}
+
+.c-main_service h2 {
+  text-transform: uppercase;
+  padding-bottom: 10px;
+  font-weight: 800;
+  color: var(--intermediate-blue-2)
 }
 
 /* ###### END MAIN ###### */
@@ -243,6 +350,22 @@ html, body {
   grid-area: footer;
 }
 /* ###### END FOOTER ###### */
+
+/* KEYFRAMES*/
+
+@keyframes to-role {
+  from {
+    display: none;
+    opacity: 0;
+  }
+
+  to {
+    display: block;
+    opacity: 1;
+  }
+}
+
+/* ###### END KEYFRAMES ###### */
 
 @media screen and (max-width: 300px) {
 
@@ -294,6 +417,10 @@ html, body {
   
   .is_right h2 {
     text-align: right;
+  }
+
+  .c-main__profile {
+    top: -90px;
   }
 }
 
@@ -347,6 +474,24 @@ html, body {
     font-size: 14px;
     text-align: left;
   }
+
+  .c-main__profile {
+    top: -30px;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .c-main__gallery_container li:nth-child(1) label {
+    left: 45%;
+  }
+  
+  .c-main__gallery_container li:nth-child(2) label {
+    left: 50%;
+  }
+  
+  .c-main__gallery_container li:nth-child(3) label {
+    left: 55%;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -377,6 +522,14 @@ html, body {
     width: auto;
   }
 
+  .c-header__ul li a {
+    color: var(--heavy-blue) !important;
+  }
+
+  .c-header__ul li a:hover {
+    color: var(--intermediate-blue) !important;
+  }
+
   .c-main__intro {
     top: -15px;
     min-height: 320px;
@@ -404,6 +557,18 @@ html, body {
   
   .c-main__benefit p {
     font-size: 14px;
+    text-align: left;
+  }
+
+  .c-main__profile {
+    flex-direction: row;
+  }
+
+  .c-main__profile_description {
+    margin-top: 30px;
+  }
+
+  .c-main__profile_description h2 {
     text-align: left;
   }
 
