--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -5,15 +5,17 @@
 }
 
 :root {
-  --blue-green: #59C9D0;
-  --light-blue: #067CB8;
-  --intermediate-blue: #0B7DB2;
-  --intermediate-blue-2: #26557A;
-  --heavy-blue: #283958;
-  --sec-blue: #B3CBD7;
+  --blue-1: #B3CBD7;
+  --blue-2: #59C9D0;
+  --blue-3: #067CB8;
+  --blue-4: #0B7DB2;
+  --blue-4: #26557A;
+  --blue-5: #283958;
   --light-white: #FBFBFB;
   --standard-white: #ffffff;
   --standard-black: #000000;
+  --std-white-transparent: rgba(255, 255, 255, 0.288);
+  --std-white-transparent-2: rgba(255, 255, 255, 0.548);
 }
 
 html, body {
@@ -54,8 +56,8 @@ html, body {
 
 /* ###### END GENERICS ######*/
 
-/* START BODY*/
-.c-body {
+/* START BODY */
+.C-body {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto 1fr auto;
@@ -63,530 +65,197 @@ html, body {
     "header"
     "main"
     "footer";
-  background-color: var(--light-white);
+  background-color: var(--blue-1);
+  background-image: url('../images/bg-body-img.jpg');
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 /* ###### END BODY ###### */
 
-/* START HEADER*/
-
-.c-header {
+/* START HEADER */
+.C-header_contact {
   grid-area: header;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-  background-color: var(--standard-white);
-}
-
-.c-header__img_bg {
-  width: 100%;
-  position: absolute;
-  z-index: 1;
-}
-
-.c-header__img_bg img {
-  max-width: 100%;
-  opacity: 0.5;
-}
-
-.c-header__social {
-  display: none;
-  position: absolute;
-  top: 10px;
-  width: 100%;
+  background-color: var(--std-white-transparent);
+  padding: 5px 0;
   text-align: center;
-  z-index: 100;
+  column-gap: 15px;
 }
 
-.c-header__social_link {
-  width: 30px;
-}
-
-.c-header__logo-container {
-  width: 100%;
-  max-width: 80px;
-  align-self: flex-start;
-  padding: 2%;
-  z-index: 2;
-}
-
-.c-header__logo {
-  max-width: 100%;
-  border-radius: 10px;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.747);
-}
-
-.c-header__nav_menu_mobile {
-  background-color: var(--intermediate-blue-2);
-  color: var(--light-white);
-  border-radius: 5px 0 0 5px;
+.C-header_whatsapp {
+  column-gap: 15px;
+  font-size: 18px;
+  color: var(--standard-black);
+  background-color: rgba(255, 255, 255, 0.507);
+  padding: 5px 5px 3px 5px;
+  border-radius: 3px;
   cursor: pointer;
-  position: absolute;
-  top: 10px;
-  right: 5px;
-  transition: all 300ms ease;
-  z-index: 1000000;
 }
 
-.c-header__nav {
-  background-color: var(--intermediate-blue-2);
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 5px;
-  overflow-y: hidden;
-  min-height: 100vh;
-  line-height: 2;
-  transition: all 300ms ease;
-  z-index: 1000000000;
+.C-header_whatsapp:hover {
+  background-color: var(--light-white);
 }
 
-.c-header__nav ul {
-  list-style-type: none;
-}
-
-.c-header__nav ul li {
-  width: fit-content;
-  margin: 0 auto;
-}
-
-.c-header__nav ul li a {
+.C-header_whatsapp a {
   text-decoration: none;
-  font-weight: 500;
-  color: var(--light-white);
-  transition: all 300ms ease;
+  column-gap: 5px;
 }
-
-.c-header__nav ul li a:hover {
-  color: var(--intermediate-blue);
-}
-
-.c-header__nav ul li a::after {
-  position: absolute;
-  content: '';
-  position: relative;
-  bottom: 0;
-  left: 50%;
-  width: 0;
-  height: 2px;
-  display: block;
-  background-color: var(--heavy-blue);
-  border-radius: 50%;
-  transition: all 300ms ease;
-}
-
-.c-header__nav ul li a:hover::after {
-  width: 100%;
-  left: 0;
-}
-/* ###### END HEADER ##### */
-
+/*  */
 
 /* START MAIN */
-.c-main {
+.C-main {
   grid-area: main;
+}
+
+.C-menu {
+  justify-content: space-between;
+  padding: 10px 10px;
+}
+
+.C-menu__ul {
+  column-gap: 45px;
+}
+
+.C-menu__li {
+  list-style: none;
+  border: 1px solid var(--standard-white);
+  padding: 8px;
+}
+
+.C-menu__li:hover {
   background-color: var(--light-white);
-  z-index: 2;
-  position: relative;
 }
 
-.c-main__intro {
-  position: relative;
-  top: -8px;
-  z-index: 2;
-}
-
-.c-main__benefit {
-  max-width: 280px;
-  line-height: 1.5;
-  background-image: linear-gradient(45deg, var(--heavy-blue), var(--intermediate-blue), var(--blue-green));
-  margin: 10px 10px;
-  padding: 10px;
-}
-
-.c-main__benefit h2 {
-  text-align: center;
-  color: var(--standard-white);
+.C-menu__li a {
   text-transform: uppercase;
-  font-size: 14px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+  color: var(--standard-white);
 }
 
-.c-main__benefit p {
-  color: var(--light-white);
-  font-size: 12px;
-  text-align: center;
+.C-menu__li a:hover {
+  color: var(--standard-black);
 }
 
-.c-main__profile {
-  padding: 0 2% 20px 2%;
-  position: relative;
-  top: -20px;
-  background-color: var(--sec-blue);
-}
-
-.c-main__profile_img-container {
+.C-logo {
   width: 100%;
-  max-width: 320px;
-  margin-top: 25px;
-  text-align: center;
+  max-width: 450px;
 }
 
-.c-main__profile_description {
-  text-align: justify;
-  line-height: 1.5;
+.C-logo img {
+  /* filter: brightness(200%); */
+  filter: brightness(150%) saturate(110%) contrast(450%) drop-shadow(16px 16px 25px white);
   width: 100%;
+  animation-name: to-show-logo;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
+}
+
+.C-intro {
+  padding: 2%;
+  background-color: rgba(255, 255, 255, 0.74);
+  overflow: hidden;
+}
+
+.C-intro__title, .C-intro__description {
+  color: rgb(0, 0, 0);
+  align-self: flex-start;
+}
+
+.C-intro__title {
+  font-size: 30px;
+  font-weight: 800;
+  font-style: italic;
+  letter-spacing: 5px;
+  max-width: 600px;
+  padding-bottom: 10px;
+}
+
+.C-intro__description {
+  font-size: 20px;
+  font-weight: 500;
   max-width: 500px;
 }
 
-.c-main__profile_description h1 {
-  text-transform: uppercase;
-  text-align: center;
-  padding-bottom: 15px;
-  color: var(--heavy-blue);
-  font-weight: bolder;
-}
-
-.c-main__gallery {
-  padding: 0 2%;
-  margin-bottom: 20px;
-}
-
-.c-main__gallery input {
-  display: none;
-}
-
-.c-main__gallery_container label {
-  display: block;
-  position: absolute;
-  bottom: 10px;
-  width: 15px;
-  height: 15px;
-  background-color: var(--light-white);
-  border-radius: 50%;
-  border: 0px solid black;
-  cursor: pointer;
-  z-index: 10;
-}
-
-.c-main__gallery_container li:nth-child(1) label {
-  left: 40%;
-}
-
-.c-main__gallery_container li:nth-child(2) label {
-  left: 50%;
-}
-
-.c-main__gallery_container li:nth-child(3) label {
-  left: 60%;
-}
-
-.c-main__gallery_container {
-  width: 100%;
-  max-width: 600px;
-  position: relative;
-}
-
-.c-main__gallery_li {
-  list-style: none;
-}
-
-.c-main__gallery_img {
-  width: 100%;
-  opacity: 0;
-  transition: all 300ms ease;
-  display: none;
-}
-
-.c-main__gallery_li input:checked ~ label {
-  background-color: var(--heavy-blue);
-}
-
-.c-main__gallery_li input:checked ~ img {
-  animation-name: to-role;
-  animation-duration: 300ms;
-  animation-timing-function: ease-in-out;
-  animation-fill-mode: forwards;
-  display: block;
-}
-
-.c-main__services_container {
-  width: 100%;
-  background-image: url('../images/bg_parallax.jpg');
-  background-size: cover;
-  background-position: top center;
-  background-attachment: fixed;
-  padding: 2%;
-}
-
-.c-main__services_content {
-  width: 100%;
-  max-width: 650px;
-  flex-wrap: wrap;
-  column-gap: 20px;
-}
-
-.c-main_service {
-  max-width: 240px;
-  text-align: center;
+.C-intro__card {
+  max-width: 800px;
+  background-color: var(--blue-4);
   margin: 10px 0;
   padding: 20px;
-  border-radius: 15px;
-  background-color: rgba(255, 255, 255, 0.733);
+  animation-duration: 1.5s;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
 }
 
-.c-main_service h2 {
-  text-transform: uppercase;
+.C-intro .C-intro__card:nth-of-type(1), .C-intro .C-intro__card:nth-of-type(3) {
+  align-self: flex-start;
+  margin-left: -100%;
+  animation-name: to-show-intro-l;
+}
+
+.C-intro .C-intro__card:nth-of-type(2) {
+  align-self: flex-end;
+  margin-right: -100%;
+  animation-name: to-show-intro-r;
+}
+
+.C-intro__card_title, .C-intro__card_description {
+  color: var(--standard-white);
+}
+
+.C-intro__card_title {
+  font-weight: 400;
+  text-transform: capitalize;
+  letter-spacing: 5px;
   padding-bottom: 10px;
-  font-weight: 800;
-  color: var(--intermediate-blue-2)
 }
 
-/* ###### END MAIN ###### */
+.C-intro__card_description {
+  letter-spacing: 1.5px;
+  line-height: 1.5;
+  font-weight: 200;
+}
 
+/* END MAIN */
 
 /* START FOOTER */
-.c-footer {
+.C-footer {
   grid-area: footer;
 }
-/* ###### END FOOTER ###### */
+/* END FOOTER */
 
-/* KEYFRAMES*/
-
-@keyframes to-role {
+/* START ANIMATION */
+@keyframes to-show-logo {
   from {
-    display: none;
     opacity: 0;
   }
 
   to {
-    display: block;
     opacity: 1;
   }
 }
 
-/* ###### END KEYFRAMES ###### */
-
-@media screen and (max-width: 300px) {
-
-}
-
-@media screen and (min-width: 320px) {
-  .c-header__logo-container {
-    max-width: 150px;
-  }
-
-  .c-main__intro {
-    min-height: 500px;
-    overflow: hidden;
-  }
-
-  .c-main__benefit {
-    position: absolute;
-    margin: 0;
-    padding: 0;
-    animation-duration: 2s;
-    animation-timing-function: ease-in-out;
-    animation-fill-mode: forwards;
-  }
-  
-  .is_left {
-    left: -100%;
-    padding: 10px 15px 10px 5px;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
-    transition: all 1s ease-in-out;
-    background-image: linear-gradient(45deg, var(--heavy-blue), var(--intermediate-blue), var(--blue-green));
-    animation-name: to-role-left;
-  }
-  
-  .is_left:nth-last-of-type(1) {
-    top: 298px;
-  }
-  
-  .is_right {
-    top: 120px;
-    right: -100%;
-    padding: 10px 15px 10px 35px;
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
-    transition: all 1s ease-in-out;
-    background-image: linear-gradient(-45deg, var(--heavy-blue), var(--intermediate-blue), var(--blue-green));
-    animation-name: to-role-right;
-  }
-  
-  .is_right h2 {
-    text-align: right;
-  }
-
-  .c-main__profile {
-    top: -90px;
-  }
-}
-
-@keyframes to-role-left {
+@keyframes to-show-intro-l {
   from {
-    left: -100%;
+    margin-left: -100%;
   }
 
   to {
-    left: 0;
+    margin-left: 0;
   }
 }
 
-@keyframes to-role-right {
+@keyframes to-show-intro-r {
   from {
-    right: -100%;
+    margin-right: -100%;
   }
 
   to {
-    right: 0;
+    margin-right: 0;
   }
 }
-
-@media screen and (min-width: 400px) {
-  .c-header__social {
-    display: block;
-  }
-
-  .c-main__intro {
-    min-height: 420px;
-  }
-
-  .c-main__benefit {
-    max-width: 360px;
-  }
-
-  .c-main__benefit:nth-last-of-type(1) {
-    top: 290px;
-  }
-
-  .is_right {
-    top: 135px;
-  }
-
-  .c-main__benefit h2 {
-    text-align: left;
-    font-size: 16px;
-  }
-  
-  .c-main__benefit p {
-    font-size: 14px;
-    text-align: left;
-  }
-
-  .c-main__profile {
-    top: -30px;
-  }
-}
-
-@media screen and (min-width: 600px) {
-  .c-main__gallery_container li:nth-child(1) label {
-    left: 45%;
-  }
-  
-  .c-main__gallery_container li:nth-child(2) label {
-    left: 50%;
-  }
-  
-  .c-main__gallery_container li:nth-child(3) label {
-    left: 55%;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .c-header__logo-container {
-    max-width: 250px;
-  }
-
-  .c-header__nav_menu_mobile {
-    display: none !important;
-  }
-
-  .c-header__nav {
-    background-color: transparent;
-    display: flex;
-    align-items: center;
-    position: relative;
-    min-width: 580px;
-    overflow-y: visible;
-    padding: 0 2%;
-    min-height: 100%;
-    line-height: 1.5;
-    transition: all 300ms ease;
-  }
-
-  .c-header__ul {
-    display: flex;
-    column-gap: 45px;
-    width: auto;
-  }
-
-  .c-header__ul li a {
-    color: var(--heavy-blue) !important;
-  }
-
-  .c-header__ul li a:hover {
-    color: var(--intermediate-blue) !important;
-  }
-
-  .c-main__intro {
-    top: -15px;
-    min-height: 320px;
-  }
-
-  .c-main__benefit {
-    min-width: 600px;
-    max-width: 600px;
-    padding: 10px 25px;
-    border-radius: 50px;
-  }
-
-  .c-main__benefit h2, .c-main__benefit p {
-    text-align: center !important;
-  }
-
-  .c-main__benefit:nth-last-of-type(1) {
-    top: 210px;
-  }
-
-  .c-main__benefit h2 {
-    text-align: left;
-    font-size: 16px;
-  }
-  
-  .c-main__benefit p {
-    font-size: 14px;
-    text-align: left;
-  }
-
-  .c-main__profile {
-    flex-direction: row;
-  }
-
-  .c-main__profile_description {
-    margin-top: 30px;
-  }
-
-  .c-main__profile_description h2 {
-    text-align: left;
-  }
-
-  @keyframes to-role-left {
-    to {
-      left: 50%;
-      transform: translate(-50%, 0);
-    }
-  }
-
-  @keyframes to-role-right {
-    from {
-      top: 95px;
-    }
-    to {
-      right: 50%;
-      top: 95px;
-      transform: translate(50%, 0);
-    }
-  }
-}
+/* END ANIMATION */
